add image into create note

--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -68,4 +68,11 @@
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/pageTitle" />
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pageContent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
