--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -13,7 +13,6 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchBar"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -26,8 +25,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/notes"
             android:fontFamily=""
+            android:text="@string/notes"
             android:textColor="#1C2121"
             android:textSize="26sp"
             android:textStyle="bold" />
@@ -36,11 +35,11 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/option_icon"
-        app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@null"
-        app:layout_constraintTop_toTopOf="@id/title"
-        app:layout_constraintBottom_toBottomOf="@id/title"/>
+        android:src="@drawable/option_icon"
+        app:layout_constraintBottom_toBottomOf="@id/title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/title" />
 
     <EditText
         android:id="@+id/searchBar"
@@ -48,9 +47,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
+        android:autofillHints="@null"
         android:hint="@string/search"
         android:inputType="text"
-        android:autofillHints="@null"
         android:paddingHorizontal="10dp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -175,13 +174,11 @@
         android:id="@+id/title_recent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginVertical="10dp"
         android:text="@string/recent_notes"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/recyclerView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hidden" />
 
@@ -189,10 +186,10 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.6"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHeight_percent="0.55"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_recent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
