--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:orientation="vertical"
+    android:layout_marginHorizontal="5dp"
     android:paddingHorizontal="10dp"
     android:paddingVertical="15dp">
 
